devops/kubernetes/networking/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    # make it so if you go to /wear it will go to the service <service-name>:<port>/ instead of 
    # the prefix it pointed to by the ingress controller
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "www.example.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: example-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/db"
        backend:
          service:
            name: db-service
            port:
              number: 80
